# BeARzzzBot

./: .gitignore  LICENSE  Procfile  README.md  alembic.ini  pyproject.toml  requirements.txt
src/: database.py  db.py  defineDB.py  insert_db.py  main.py  models.py
src/bearzzzbot/: asgi.py  config.py  database.py  deps.py  insert_db.py  main.py  routes.py  schemas.py
src/bearzzzbot/drawings/: models.py  resources.py  schemas.py  services.py
src/bearzzzbot/migrations/: env.py
src/bearzzzbot/migrations/versions/: 9a8c61986896_add_drawing_option_reversal.py  b7b8577fe9d6_init.py
src/bearzzzbot/models/: base.py  base_class.py  mixins.py  utils.py
templates/: main.html
